# webrtc-cpp-demo

./: CMakeLists.txt  main.cpp  settings.cpp  settings.h  settings.ui
webrtc/: CMakeLists.txt  Singleton.h  StatsReporter.cpp  StatsReporter.h  ThreadManager.cpp  ThreadManager.h
